2011-03-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt: Sync with config.h created by autoconf.

2011-03-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/gd.trm (PNG_put_text ENHGD_FLUSH gd_iconv):  Invoke the
	SJIS/UTF8 conversion for both enhanced and non-enhanced text.
	EAM - and collapse the share code into a subroutine.

2011-03-26  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Add missing paths to wxt/cairo/pango
	files. Update build instructions.  WX_LOCATION is no longer
	required since gnuplot has its own manifest file now and the one
	supplied by wxWidgets is no longer included. htmlhelp.lib is
	included in LDLIBS not TERMFLAGS. Replace '=' by ':=' for shell
	commands. Filter out drive specifications "c:" in results from
	pkg-config which would confuse make.

2011-03-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c docs/gnuplot.doc:  Allow pm3d plots to use the fourth
	column of data as "rgb variable" rather than "palette z".

2011-03-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wtext.c: Make more stuff module-local.  Resolve several
	signedness conflicts introduced by functions in new screenbuf.c
	module.

2011-03-25  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main), src/win/winmain.c (WinMain, WinExit),
	src/win/wcommon.h: The code which changes the codepages for
	console gnuplot is only compiled in if CONSOLE_SWITCH_CP is
	defined.  Otherwise gnuplot will only display a warning if
	codepages differ.  Handle the case when codepages already match.

2011-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/Makefile.maint: Fill in the "last modified" date from the most
	recent entry in the ChangeLog rather than the using the current date,
	and only then if the VERSION or PATCHLEVEL has been changed.
	Caution: tested only under linux with gnu make.

2011-03-22  Bastian Maerkisch  <bmaerkisch@web.de>
